remove fluent assertions

--- a/NuclearEvaluation.Server/Shared/DataManagement/DataManagementTabs.razor
+++ b/NuclearEvaluation.Server/Shared/DataManagement/DataManagementTabs.razor
@@ -11,10 +11,8 @@
                         AllowEdit="true" />
         </RadzenTabsItem>
 
-        <RadzenTabsItem Text="Data Upload">
-            <RadzenLabel Text="Page Under Development" Style="font-size: 20px; font-weight: bold;" />
-            <p />
-            <RadzenLabel Text="This page is currently under development. Please check back later for updates." Style="font-size: 16px; padding-top: 10px;" />
+        <RadzenTabsItem Text="Data Preview">
+            <FileUploadPreview />
         </RadzenTabsItem>
 
     </Tabs>
