--- a/NuclearEvaluation.Server/_Imports.razor
+++ b/NuclearEvaluation.Server/_Imports.razor
@@ -15,6 +15,7 @@
 @using NuclearEvaluation.Server
 @using NuclearEvaluation.Server.Shared
 @using NuclearEvaluation.Server.Models
+@using NuclearEvaluation.Server.Models.Identity;
 @using NuclearEvaluation.Server.Shared.Generics
 @using NuclearEvaluation.Server.Data
 @using NuclearEvaluation.Server.Validators
