--- a/NuclearEvaluation.Server/Shared/DataManagement/DataManagementTabs.razor
+++ b/NuclearEvaluation.Server/Shared/DataManagement/DataManagementTabs.razor
@@ -12,7 +12,7 @@
         </RadzenTabsItem>
 
         <RadzenTabsItem Text="Data Preview">
-            <FileUploadPreview />
+            <StemPreview />
         </RadzenTabsItem>
 
     </Tabs>
