--- a/NuclearEvaluation.Server/Pages/_Host.cshtml
+++ b/NuclearEvaluation.Server/Pages/_Host.cshtml
@@ -47,7 +47,7 @@
         <a class="dismiss">🗙</a>
     </div>
 
-    <script src="~/scripts/scripts.js"></script>
+    <script src="~/scripts/scripts.js?v=1.02"></script>
     <script src="_framework/blazor.server.js"></script>
     <script src="_content/Radzen.Blazor/Radzen.Blazor.js?v=@(typeof(Radzen.Colors).Assembly.GetName().Version)"></script>
     <persist-component-state />
