--- a/NuclearEvaluation.Server/Shared/DataManagement/StemPreview.razor
+++ b/NuclearEvaluation.Server/Shared/DataManagement/StemPreview.razor
@@ -23,7 +23,7 @@
                 <RadzenDataGridColumn TItem="UploadedFile" Property="BrowserFile.Name" Title="File Name" Width="50%" />
                 <RadzenDataGridColumn TItem="UploadedFile" Title="File Size (MB)" Width="100px" TextAlign="TextAlign.Center">
                     <Template Context="file">
-                        <span>@((file.BrowserFile.Size / 1048576.0).ToString("F2")) MB</span>
+                        <span>@((file.BrowserFile.Size.AsMegabytes()).ToString("F2")) MB</span>
                     </Template>
                 </RadzenDataGridColumn>
                 <RadzenDataGridColumn TItem="UploadedFile" Width="150px" TextAlign="TextAlign.Center" Title="Upload Status">
@@ -41,8 +41,7 @@
                         }
                         else if (file.Status == UploadStatus.UploadError)
                         {
-                            //TODO display dynamic error
-                            <span>Exceeds file size</span>
+                            <span>@(file.ErrorMessage)</span>
                         }
                         else
                         {
