current progress on STEM

--- a/NuclearEvaluation.Server/Shared/Generics/GenericEnumColumnFilter.razor
+++ b/NuclearEvaluation.Server/Shared/Generics/GenericEnumColumnFilter.razor
@@ -1,5 +1,5 @@
 @typeparam T where T : struct, Enum
-@typeparam K where K : class, IIdentifiable
+@typeparam K where K : class
 
 <div class="rz-grid-filter">
     @if (_isLoading)
