--- a/NuclearEvaluation.Server/_Imports.razor
+++ b/NuclearEvaluation.Server/_Imports.razor
@@ -27,6 +27,7 @@
 @using NuclearEvaluation.Library.Models.Filters
 @using NuclearEvaluation.Library.Interfaces
 @using NuclearEvaluation.Library.Models.QueryBuilder
+@using NuclearEvaluation.Library.Models.DataManagement
 
 @using NuclearEvaluation.Library.Extensions
 
