good progress on stem preview grid

--- a/NuclearEvaluation.Server/Shared/Evaluation/QueryBuilder/ParticleQueryBuilderFilter.razor
+++ b/NuclearEvaluation.Server/Shared/Evaluation/QueryBuilder/ParticleQueryBuilderFilter.razor
@@ -8,7 +8,7 @@
         <RadzenDataFilterProperty Property="Particle.ErU234" Title="ErU234" />
         <RadzenDataFilterProperty Property="Particle.U235" Title="U235" />
         <RadzenDataFilterProperty Property="Particle.ErU235" Title="ErU235" />
-        <RadzenDataFilterProperty Property="Particle.AnalysisDate" Title="Analysis Date" FormatString="{0:yyyy-MM-dd}" />
+        <RadzenDataFilterProperty Property="Particle.AnalysisDate" Title="Analysis Date" FormatString="@DateOnlyFormat" />
         <RadzenDataFilterProperty Property="Particle.IsNu" Title="Is Nu" />
         <RadzenDataFilterProperty Property="Particle.LaboratoryCode" Title="Laboratory Code" />
         <RadzenDataFilterProperty Property="Particle.Comment" Title="Comment" />
