--- a/NuclearEvaluation.Server/Shared/Grids/ParticleGrid.razor
+++ b/NuclearEvaluation.Server/Shared/Grids/ParticleGrid.razor
@@ -35,7 +35,7 @@
 
             <RadzenDataGridColumn Property="@nameof(ParticleView.AnalysisDate)"
                                   TextAlign="TextAlign.Left"
-                                  FormatString="{0:yyyy-MM-dd}"
+                                  FormatString="@DateOnlyFormat"
                                   Title="Analysis Date" />
 
             <RadzenDataGridColumn Property="@nameof(ParticleView.IsNu)"
