--- a/NuclearEvaluation.Server/Shared/Grids/SampleGrid.razor
+++ b/NuclearEvaluation.Server/Shared/Grids/SampleGrid.razor
@@ -57,7 +57,7 @@
 
             <RadzenDataGridColumn Property="@nameof(SampleView.SamplingDate)"
                                   TextAlign="TextAlign.Left"
-                                  FormatString="{0:yyyy-MM-dd}"
+                                  FormatString="@DateOnlyFormat"
                                   Title="Sampling Date" />
 
             <RadzenDataGridColumn Property="@nameof(SampleView.SubSampleCount)"
