--- a/NuclearEvaluation.Server/Shared/Evaluation/QueryBuilder/SampleQueryBuilderFilter.razor
+++ b/NuclearEvaluation.Server/Shared/Evaluation/QueryBuilder/SampleQueryBuilderFilter.razor
@@ -8,7 +8,7 @@
         <RadzenDataFilterProperty Property="Sample.SeriesId" Title="Series Id" />
         <RadzenDataFilterProperty Property="Sample.SampleClass" Title="Sample Class" />
         <RadzenDataFilterProperty Property="Sample.SampleType" Title="Sample Type" />
-        <RadzenDataFilterProperty Property="Sample.SamplingDate" Title="Sampling Date" FormatString="{0:yyyy-MM-dd}" />
+        <RadzenDataFilterProperty Property="Sample.SamplingDate" Title="Sampling Date" FormatString="@DateOnlyFormat" />
         <RadzenDataFilterProperty Property="Sample.SubSampleCount" Title="SubSample Count" />
         <RadzenDataFilterProperty Property="Sample.Latitude" Title="Latitude" />
         <RadzenDataFilterProperty Property="Sample.Longitude" Title="Longitude" />
