--- a/NuclearEvaluation.Server/Shared/Evaluation/QueryBuilder/SeriesQueryBuilderFilter.razor
+++ b/NuclearEvaluation.Server/Shared/Evaluation/QueryBuilder/SeriesQueryBuilderFilter.razor
@@ -5,12 +5,12 @@
     <Properties>
         <RadzenDataFilterProperty Property="Series.Id" Title="Series Id" />
         <RadzenDataFilterProperty Property="Series.SeriesType" Title="Series Type" />
-        <RadzenDataFilterProperty Property="Series.CreatedAt" Title="Created At" FormatString="{0:yyyy-MM-dd}" />
+        <RadzenDataFilterProperty Property="Series.CreatedAt" Title="Created At" FormatString="@DateOnlyFormat" />
         <RadzenDataFilterProperty Property="Series.SgasComment" Title="Sgas Comment" />
         <RadzenDataFilterProperty Property="Series.WorkingPaperLink" Title="Working Paper Link" />
         <RadzenDataFilterProperty Property="Series.IsDu" Title="Is Du" />
         <RadzenDataFilterProperty Property="Series.IsNu" Title="Is Nu" />
-        <RadzenDataFilterProperty Property="Series.AnalysisCompleteDate" Title="Analysis Complete Date" FormatString="{0:yyyy-MM-dd}" />
+        <RadzenDataFilterProperty Property="Series.AnalysisCompleteDate" Title="Analysis Complete Date" FormatString="@DateOnlyFormat" />
         <RadzenDataFilterProperty Property="Series.SampleExternalCodes" Title="Sample External Codes" />
         <RadzenDataFilterProperty Property="Series.SampleCount" Title="Sample Count" />
     </Properties>
