--- a/NuclearEvaluation.Server/Shared/Evaluation/QueryBuilder/SubSampleQueryBuilderFilter.razor
+++ b/NuclearEvaluation.Server/Shared/Evaluation/QueryBuilder/SubSampleQueryBuilderFilter.razor
@@ -5,7 +5,7 @@
     <Properties>
         <RadzenDataFilterProperty Property="SubSample.Sequence" Title="Sequence" />
         <RadzenDataFilterProperty Property="SubSample.ExternalCode" Title="External Code" />
-        <RadzenDataFilterProperty Property="SubSample.ScreeningDate" Title="Screening Date" FormatString="{0:yyyy-MM-dd}" />
+        <RadzenDataFilterProperty Property="SubSample.ScreeningDate" Title="Screening Date" FormatString="@DateOnlyFormat" />
         <RadzenDataFilterProperty Property="SubSample.IsFromLegacySystem" Title="Is From Legacy System" />
         <RadzenDataFilterProperty Property="SubSample.ActivityNotes" Title="Activity Notes" />
         <RadzenDataFilterProperty Property="SubSample.TrackingNumber" Title="Tracking Number" />
