--- a/NuclearEvaluation.Server/Shared/DataManagement/StemPreview.razor
+++ b/NuclearEvaluation.Server/Shared/DataManagement/StemPreview.razor
@@ -14,6 +14,7 @@
 
     <InputFile @ref="fileInput"
                OnChange="OnInputFileChange"
+               Multiple
                style="display:none" />
 
     <RadzenButton Text="Select files..."
