some progress on stem preview upload

--- a/NuclearEvaluation.Server/Shared/DataManagement/StemPreview.razor
+++ b/NuclearEvaluation.Server/Shared/DataManagement/StemPreview.razor
@@ -6,8 +6,9 @@
 <h3>Upload your STEM-compatible analysis files for preview</h3>
 <h3>This preview tool is highly capable and can handle files with hundreds of thousands of rows</h3>
 
-<p>You can download a populated sample file <a href="URL_PLACEHOLDER">here</a></p>
-<p>Or a blank sample file <a href="URL_PLACEHOLDER">here</a></p>
+<p>You can download a populated sample file (1,048,567 rows) <a href="files/stem-preview/populated-stem-preview-file-1048567-rows.xlsx" download>here</a></p>
+<p>Or a smaller one here (350,000 rows) <a href="files/stem-preview/populated-stem-preview-file-350000-rows.xlsx" download>here</a></p>
+<p>Or a blank sample file <a href="files/stem-preview/blank-stem-preview-template.xlsx" download>here</a></p>
 
 <RadzenCard Variant="Variant.Outlined" style="padding: 1rem;">
     <RadzenText TextStyle="TextStyle.Subtitle2" TagName="TagName.H3">Multiple Files Upload</RadzenText>
