--- a/NuclearEvaluation.Server/Shared/Grids/StemPreviewEntryGrid.razor
+++ b/NuclearEvaluation.Server/Shared/Grids/StemPreviewEntryGrid.razor
@@ -33,10 +33,6 @@
                                   TextAlign="TextAlign.Center" 
                                   FormatString="@DecimalFormat" />
 
-            <RadzenDataGridColumn Property="@nameof(StemPreviewEntryView.FileName)"
-                                  TextAlign="TextAlign.Left"
-                                  Title="File Name" />
-
             <RadzenDataGridColumn Property="@nameof(StemPreviewEntryView.LabCode)"
                                   TextAlign="TextAlign.Left"
                                   Title="Lab Code" />
@@ -70,6 +66,11 @@
                                   TextAlign="TextAlign.Left"
                                   FormatString="@DecimalFormat"
                                   Title="ErU235" />
+
+            <RadzenDataGridColumn Property="@nameof(StemPreviewEntryView.FileName)"
+                                  TextAlign="TextAlign.Left"
+                                  Width="350px"
+                                  Title="File Name" />
 
         </Columns>
     </RadzenDataGrid>
